--- a/src/src/style.css
+++ b/src/src/style.css
@@ -1,4 +1,4 @@
-@import url(https://necolas.github.io/normalize.css/8.0.1/normalize.css);
+/* @import url(https://necolas.github.io/normalize.css/8.0.1/normalize.css); */
 
 #app {
   max-width: 1360px; /* 1280px; */
@@ -25,8 +25,13 @@ h1 {
   padding: 10px 15px; /* padding: 15px 20px; */
 }
 
-img {
+.stock-item__cover {
   flex: 0 0 30px;
+  margin-right: 15px;
+}
+
+.stock-item__cover img {
+  flex: 0 0 10px;
   margin-right: 10px;
   width: 100%;
 }
